IDE Hints and warning Fixed some possible NullPointer Exceptions